--- a/src/index.css
+++ b/src/index.css
@@ -901,6 +901,10 @@ html {
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
+  transition: 0.3s;
+}
+.teamDevPic:hover {
+  scale: 1.1;
 }
 
 .teamDevName {
